fix "refresh" message on mobile

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -115,6 +115,12 @@ footer {
     }
 }
 
+@media screen and (max-width: 1200px) {
+    .refresh {
+        position: relative;
+    }
+  }
+
 .banner {
     text-align: center;
     border-color: brown;
